# lw-tray

./: .gitignore  Cargo.toml  PKGBUILD  README.md  go.mod  update_translations
.cargo/: config.toml
.github/workflows/: main.yml
golang/: go.sum  lw_tray.pot  main.go
locales/ru_RU/LC_MESSAGES/: lw_tray.mo  lw_tray.po
src/: main.rs
