[package]
name = "lw-tray"
version = "0.0.4"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/VHSgunzo/lw-tray"
description = "Lux Wine tray"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = "symbols"
codegen-units = 1

[profile.dev]
panic = "abort"
opt-level = 0

[dependencies]
ksni = "*"
execute = "*"
