[package]
name = "lw-tray"
version = "0.0.6"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/VHSgunzo/lw-tray"
description = "Lux Wine tray"
edition = "2021"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = "symbols"
debug  = false
codegen-units = 1

[profile.dev]
panic = "abort"
opt-level = 0

[dependencies]
ksni = "0.2.1"
execute = "0.2.12"
rust-embed = "5.9.0"
translation = "1.0.2"
